--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -7,12 +7,12 @@
         <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>09:15</td>        <!-- time    -->
+        <td>Introduction</td>        <!-- content -->
       </tr>
       <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>10:30</td>        <!-- time    -->
+        <td>Break</td>        <!-- content -->
       </tr>
     </table>
   </div>
