blurb, schedule, emails, timetable

--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -7,12 +7,12 @@
         <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
       </tr>
       <tr>               <!-- row 2   -->
-        <td>09:15</td>        <!-- time    -->
-        <td>Introduction</td>        <!-- content -->
+        <td>10:00</td>        <!-- time    -->
+        <td><a href="https://carpentries-incubator.github.io/high-dimensional-stats-r/01-introduction/index.html"> Introduction </a> </td>        <!-- content -->
       </tr>
       <tr>               <!-- row 3   -->
-        <td>10:30</td>        <!-- time    -->
-        <td>Break</td>        <!-- content -->
+        <td>13:00</td>        <!-- time    -->
+        <td>End</td>        <!-- content -->
       </tr>
     </table>
   </div>
@@ -20,16 +20,12 @@
     <h3>Day 2</h3>
     <table class="table table-striped">
       <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>10:00</td>        <!-- time    -->
+        <td><a href="https://carpentries-incubator.github.io/high-dimensional-stats-r/02-high-dimensional-regression/index.html">High-dimensional regression </a></td>        <!-- content -->
       </tr>
       <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>13:00</td>        <!-- time    -->
+        <td>End</td>        <!-- content -->
       </tr>
     </table>
   </div>
@@ -39,16 +35,12 @@
     <h3>Day 3</h3>
     <table class="table table-striped">
       <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>10:00</td>        <!-- time -->
+        <td><a href="https://carpentries-incubator.github.io/high-dimensional-stats-r/05-dimensionality-reduction/index.html">Dimensionality reduction</a></td>        <!-- content -->
       </tr>
       <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
-      </tr>
-      <tr>               <!-- row 3   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>13:00</td>        <!-- time    -->
+        <td>End</td>        <!-- content -->
       </tr>
     </table>
   </div>
@@ -56,15 +48,15 @@
     <h3>Day 4</h3>
     <table class="table table-striped">
       <tr>               <!-- row 1   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>10:00</td>        <!-- time    -->
+        <td><a href="https://carpentries-incubator.github.io/high-dimensional-stats-r/06-clustering/index.html">Dimensionality reduction</a></td>        <!-- content -->
       </tr>
       <tr>               <!-- row 2   -->
-        <td></td>        <!-- time    -->
-        <td></td>        <!-- content -->
+        <td>13:00</td>        <!-- time    -->
+        <td>End</td>        <!-- content    -->
       </tr>
       <tr>               <!-- row 3   -->
-        <td>End</td>
+        <td>After the course</td>
         <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
       </tr>
     </table>
