--- a/_includes/workshop_footer.html
+++ b/_includes/workshop_footer.html
@@ -6,7 +6,7 @@
   <div class="row">
     <div class="col-md-6" align="left">
       <h4>
-	Copyright &copy; 2016–{{ 'now' | date: "%Y" }}
+	Copyright &copy; {{ 'now' | date: "%Y" }}
 	{% if site.carpentry == "swc" %}
 	<a href="{{ site.swc_site }}">Software Carpentry</a>
 	{% elsif site.carpentry == "dc" %}
@@ -20,7 +20,7 @@
     </div>
     <div class="col-md-6" align="right">
       <h4>
-	<a href="mailto:{{ site.email }}">Contact The Carpentries</a>
+	<a href="mailto:{{ site.email }}">Contact the Ed-DaSH Team</a>
       </h4>
     </div>
   </div>
