--- a/_includes/custom-schedule.html
+++ b/_includes/custom-schedule.html
@@ -1,63 +1,85 @@
 <div class="row">        <!-- first two days -->
   <div class="col-md-6"> <!-- left column -->
-    <h3>Day 1</h3>
+    <h3>Day 1 : 11th October (9:45 - 12:45)</h3>
     <table class="table table-striped">
       <tr>               <!-- row 1   -->
-        <td>Before starting</td>
-        <td><a href="{{ site.pre_survey }}{{ site.github.project_title }}" target="_blank">Pre-workshop survey</a></td>
+        <td colspan="2" style="text-align:center">Pre-workshop Setup</td>
       </tr>
       <tr>               <!-- row 2   -->
-        <td>10:00</td>        <!-- time    -->
-        <td><a href="https://carpentries-incubator.github.io/high-dimensional-stats-r/01-introduction/index.html"> Introduction </a> </td>        <!-- content -->
+        <td colspan="2" style="text-align:center"><strong>Lessons</strong></td>
       </tr>
       <tr>               <!-- row 3   -->
-        <td>13:00</td>        <!-- time    -->
-        <td>End</td>        <!-- content -->
+        <td rowspan="1" style="vertical-align:middle"><a href="https://carpentries-incubator.github.io/high-dimensional-stats-r/">High-Dimensional Statistics with R</a></td>        <!-- content -->
+        <td>Introduction</td>
+      </tr>
+      <tr>               <!-- row 4   -->
+        <td colspan="2" style="text-align:center"><strong>Break</strong></td>        <!-- time    -->
+      </tr>
+      <tr>               <!-- row 5   -->
+        <td>Morning</td>        <!-- time    -->
+        <td>10:45 - 11:00</td>        <!-- content -->
       </tr>
     </table>
   </div>
   <div class="col-md-6"> <!-- right column -->
-    <h3>Day 2</h3>
+    <h3>Day 2 : 12th October (9:45 - 12:45)</h3>
     <table class="table table-striped">
       <tr>               <!-- row 1   -->
-        <td>10:00</td>        <!-- time    -->
-        <td><a href="https://carpentries-incubator.github.io/high-dimensional-stats-r/02-high-dimensional-regression/index.html">High-dimensional regression </a></td>        <!-- content -->
+        <td colspan="2" style="text-align:center"><strong>Lessons</strong></td>
       </tr>
       <tr>               <!-- row 2   -->
-        <td>13:00</td>        <!-- time    -->
-        <td>End</td>        <!-- content -->
+        <td rowspan="1" style="vertical-align:middle"><a href="https://carpentries-incubator.github.io/high-dimensional-stats-r/">High-Dimensional Statistics with R</a></td>        <!-- content -->
+        <td>Regression with many features</td>
+      </tr>
+      <tr>               <!-- row 3   -->
+        <td colspan="2" style="text-align:center"><strong>Break</strong></td>        <!-- time    -->
+      </tr>
+      <tr>               <!-- row 4   -->
+        <td>Morning</td>        <!-- time    -->
+        <td>10:45 - 11:00</td>        <!-- content -->
       </tr>
     </table>
   </div>
 </div>
 <div class="row">        <!-- days 3 and 4 -->
   <div class="col-md-6"> <!-- left column -->
-    <h3>Day 3</h3>
+    <h3>Day 3 : 13th October (9:45 - 12:45)</h3>
     <table class="table table-striped">
       <tr>               <!-- row 1   -->
-        <td>10:00</td>        <!-- time -->
-        <td><a href="https://carpentries-incubator.github.io/high-dimensional-stats-r/05-dimensionality-reduction/index.html">Dimensionality reduction</a></td>        <!-- content -->
+        <td colspan="2" style="text-align:center"><strong>Lessons</strong></td>
       </tr>
       <tr>               <!-- row 2   -->
-        <td>13:00</td>        <!-- time    -->
-        <td>End</td>        <!-- content -->
+        <td rowspan="2" style="vertical-align:middle"><a href="https://carpentries-incubator.github.io/high-dimensional-stats-r/">High-Dimensional Statistics with R</a></td>        <!-- content -->
+        <td>Regularised regression with many features</td>
+      </tr>
+      <tr>               <!-- row 2   -->
+        <td>Feature selection for regression</td>
+      </tr>
+      <tr>               <!-- row 3   -->
+        <td colspan="2" style="text-align:center"><strong>Break</strong></td>        <!-- time    -->
+      </tr>
+      <tr>               <!-- row 4   -->
+        <td>Morning</td>        <!-- time    -->
+        <td>10:45 - 11:00</td>        <!-- content -->
       </tr>
     </table>
   </div>
   <div class="col-md-6"> <!-- right column -->
-    <h3>Day 4</h3>
+    <h3>Day 4 : 14th October (9:45 - 12:45)</h3>
     <table class="table table-striped">
       <tr>               <!-- row 1   -->
-        <td>10:00</td>        <!-- time    -->
-        <td><a href="https://carpentries-incubator.github.io/high-dimensional-stats-r/06-clustering/index.html">Dimensionality reduction</a></td>        <!-- content -->
+        <td colspan="2" style="text-align:center"><strong>Lessons</strong></td>
       </tr>
       <tr>               <!-- row 2   -->
-        <td>13:00</td>        <!-- time    -->
-        <td>End</td>        <!-- content    -->
+        <td rowspan="1" style="vertical-align:middle"><a href="https://carpentries-incubator.github.io/high-dimensional-stats-r/">High-Dimensional Statistics with R</a></td>        <!-- content -->
+        <td>Clustering</td>
       </tr>
       <tr>               <!-- row 3   -->
-        <td>After the course</td>
-        <td><a href="{{ site.post_survey }}{{ site.github.project_title }}" target="_blank">Post-workshop survey</a></td>
+        <td colspan="2" style="text-align:center"><strong>Break</strong></td>        <!-- time    -->
+      </tr>
+      <tr>               <!-- row 4   -->
+        <td>Morning</td>        <!-- time    -->
+        <td>10:45 - 11:00</td>        <!-- content -->
       </tr>
     </table>
   </div>
